# pyDockerTemplate

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
